# DARE

./: .gitignore  README.md  dataset_driver.py  dataset_parameter.py  dataset_worker.py  environment.yml  parameter.py  pyproject.toml  test_driver.py  test_parameter.py  test_worker.py  train_exploration_transformer_map_discrete.yaml  train_exploration_transformer_node_discrete.yaml
classes/: utils.py
classes/agent/: agent.py  node_manager.py
classes/env/: env.py  sensor.py
classes/planner/: expert_planner.py  ground_truth_planner.py  ortools_solver.py
diffusion_policy/common/: replay_buffer.py
diffusion_policy/config/: train_diffusion_transformer_map_workspace.yaml  train_diffusion_transformer_node_workspace.yaml  train_diffusion_unet_ddim_node_workspace.yaml  train_diffusion_unet_node_workspace.yaml
diffusion_policy/config/task/: exploration_map.yaml  exploration_node.yaml
diffusion_policy/dataset/: exploration_map_dataset.py  exploration_node_dataset.py
diffusion_policy/model/encoder/: exploration_map_encoder.py  exploration_node_encoder.py
diffusion_policy/policy/: diffusion_transformer_map_discrete_policy.py  diffusion_transformer_node_discrete_policy.py  diffusion_transformer_node_policy.py  diffusion_unet_node_discrete_policy.py  diffusion_unet_node_policy.py
diffusion_policy/workspace/: train_diffusion_transformer_map_workspace.py  train_diffusion_transformer_node_workspace.py  train_diffusion_unet_node_workspace.py
