[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dare_exploration"
version = "1.0.0"
description = "DARE: Diffusion Policy to Autonomous Robotics Exploration"
readme = "README.md"
requires-python = ">=3.12.9"
license = { text = "MIT" }
authors = [
	{ name = "marmotlab" }
]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
    "torch==2.4.0",
    "numpy==1.26.4",
    "matplotlib==3.10.7",
    "scikit-image==0.25.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "zarr==2.12.0",
    "numcodecs==0.13",
    "diffusers==0.36.0",
    "numba==0.63.0",
    "dill==0.3.5.1",
    "einops==0.4.1",
    "hydra-core==1.3.2",
    "wandb==0.23.1",
    "pandas==2.3.3",
    "ray==2.41.0",
    "ortools==9.12.4544",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
